cluster/apps/navidrome/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome-ingress
  namespace: navidrome-ns
spec:
  rules:
    - host: "navidrome.capricorn.brendonmccool.com"  # Your hostname
      http:
        paths:
        # Path-based routing settings:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: navidrome  # The name of the service
                port:
                  number: 4533  # Service Portnumber
